# 05-chat

./: .env  .pre-commit-config.yaml  Cargo.toml  _typos.toml  cliff.toml  deny.toml  test.http  test.rest
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/sql/: init.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  messages.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250106015125_initial.sql  20250114022354_workspace.sql  20250126074719_trigger.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
src/handlers/: chat.rs  message.rs  mod.rs
