[package]
name = "chat-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow.workspace = true
axum = { workspace = true }
axum-extra = { workspace = true }
chrono = { workspace = true }
jwt-simple = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tower.workspace = true
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
tracing = { workspace = true }
uuid = { version = "1.11.0", features = ["serde", "v7"] }
