[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
jwt-simple = "0.12.11"
serde = { workspace = true }
serde_json = "1.0.135"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["compression-full", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.11.0", features = ["serde", "v7"] }

[dev-dependencies]
http-body-util = "0.1.2"
sqlx-db-tester = "0.5.0"
