[package]
name = "notify-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { workspace = true }
tokio-stream = "0.1.17"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
